dev/ingress/fundit-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fundit
  namespace: dev
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: "[{\"HTTP\": 80}]"
    alb.ingress.kubernetes.io/group.name: fundit-alb
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: fundit-backend-svc
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fundit-frontend-svc
                port:
                  number: 80
